--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "request": "^2.88.2",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.4.5"
+  },
+  "engines": {
+    "node": ">=18.x"
   }
 }
