--- a/vercel.json
+++ b/vercel.json
@@ -6,6 +6,13 @@
             "config": {
                 "distDir": "dist"
             }
+        },
+        {
+            "src": "api/**/*.js",
+            "use": "@vercel/node",
+            "config": {
+                "nodeVersion": "18.x"
+            }
         }
     ],
     "routes": [
