NEW VERCEL FILE

--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,5 @@
 {
+    "version": 2,
     "builds": [
         {
             "src": "package.json",
@@ -6,19 +7,12 @@
             "config": {
                 "distDir": "dist"
             }
-        },
-        {
-            "src": "api/**/*.js",
-            "use": "@vercel/node",
-            "config": {
-                "nodeVersion": "18.x"
-            }
         }
     ],
     "routes": [
         {
             "src": "/(.*)",
-            "dest": "/index.html"
+            "dest": "/"
         }
     ]
 }
