--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "astro": "4.8.3",
     "astro-tunnel": "^0.1.6",
     "express": "^4.19.2",
+    "firebase": "^10.12.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.23.1",
     "request": "^2.88.2",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.4.5"
