--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@astrojs/react": "^3.3.4",
     "@astrojs/tailwind": "^5.1.0",
     "@astrojs/vercel": "^7.6.0",
+    "@sanity/client": "^6.27.2",
     "@types/react": "^18.3.2",
     "@types/react-dom": "^18.3.0",
     "astro": "4.8.3",
@@ -24,6 +25,7 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.23.1",
     "request": "^2.88.2",
+    "sanity": "^3.72.1",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.4.5"
   },
